# Beethoven-Zoo

./: .gitignore  README.md
A3/: Beethoven.toml  README.md  build.sbt
A3/hw/src/main/scala/: A3ZooBuild.scala
A3/hw/src/main/scala/design/A3/: A3.scala  A3Config.scala  A3Core.scala  A3LUT.scala  A3Params.scala  Divide.scala  DotProduct.scala  ExponentComputation.scala  MultiCycleIntDivide.scala  OutputComputation.scala  (+1 more)
A3/sw/: A3-n320d64q16.h  CMakeLists.txt  a3_tb.cc
DotProduct/: Beethoven.toml  README.md  build.sbt
DotProduct/hw/src/main/scala/dot_product/: Constants.scala  DotProductConfig.scala  DotProductCore.scala
DotProduct/sw/: CMakeLists.txt  dot_product_tb.cc
GameBoy/: .gitignore  Beethoven.toml  README.md  build.sbt  dramsim3.json  dramsim3.txt  dramsim3epoch.json  launch_mario.sh
GameBoy/docs/: beethoven-interfaces.md  board-bringup.md  goal.md  implementation-plan.md  interfaces.md  run-pokemon-mario.md
GameBoy/hw/src/main/scala/gameboy_zu3/: AudioRingWriter.scala  ExternalGameboyCore.scala  FramebufferWriter.scala  GameboyBeethovenCore.scala  MemoryChannelBridges.scala  MemoryInterface.scala  Zu3GameboySubsystem.scala
GameBoy/scripts/: board_cart_persistence_smoke.py  board_debug_probe.py  board_gui_smoke.py  board_smoke.py  host_smoke.py  sim_smoke.py
GameBoy/sw/: CMakeLists.txt  gameboy_bridge.cc  gameboy_runtime_tb.cc  gameboy_status_tb.cc  pyproject.toml
GameBoy/sw/gameboy_host/: __init__.py  __main__.py  audio.py  bridge.py  buffers.py  device.py  gamepad.py  gtk_app.py  mmio.py  registers.py  rom.py
SHAKE256/: Beethoven.toml  build.sbt
SHAKE256/hw/src/main/scala/shake256_lwr/: SHAKE256LWRCmd.scala  SHAKE256LWRConfig.scala  SHAKE256LWRConstants.scala
SHAKE256/hw/src/main/verilog/: SHAKE256LWRCore.v  ShakeLWREncrypt.v  hash_to_vector.v  shake256.v
SHAKE256/sw/: CMakeLists.txt  shake256.cpp  shake256.hpp  shake256_lwr_tb.cc
SystolicArray/: Beethoven.toml  build.sbt
SystolicArray-Verilog/: build.sbt
SystolicArray-Verilog/hw/src/main/resources/: SystolicArray.v  SystolicArrayCore.v
SystolicArray-Verilog/hw/src/main/scala/systolic_array/: Constants.scala  SystolicArrayCmd-Solution.scala  SystolicArrayCmd.scala  SystolicArrayVerilogConfig-Solution.scala  SystolicArrayVerilogConfig.scala
SystolicArray-Verilog/sw/: CMakeLists.txt  systolic_array_tb.cc
SystolicArray/hw/src/main/resources/: SystolicArrayCore.v  WeightQueue.v
SystolicArray/hw/src/main/scala/systolic_array/: Constants.scala  ProcessingElement.scala  SystolicArray.scala  SystolicArrayConfig.scala  SystolicArrayConfigSolution.scala  SystolicArrayCore.scala  SystolicArrayVerilogConfig.scala
SystolicArray/sw/: CMakeLists.txt  init_weights_tb.cc  systolic_array_tb.cc
(+1 files in other folders)
