[project]
name = "beethoven-gameboy-host"
version = "0.1.0"
description = "Linux PS host application for the Beethoven ZU3 Game Boy emulator"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
]

[project.scripts]
beethoven-gameboy = "gameboy_host.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
